# c1-element-tests

./: .gitignore  Makefile.am  basis_function_check_fvk.cc  basis_function_check_ks.cc  internal_kink_fvk.cc  internal_kink_ks.cc  ks_fd_testing.cc  template.bash  triangle_element.cc
